added Snap Store shortcut

--- a/config
+++ b/config
@@ -63,6 +63,7 @@ bindsym $mod+d exec rofi -show drun
 
 bindsym $mod+F2 exec firefox
 bindsym $mod+F3 exec nautilus
+bindsym $mod+F4 exec snap-store
 
 # change focus
 bindsym $mod+j focus left
